--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,18 @@
+[workspace]
+members = [
+    "macros",
+    ".",
+]
+
 [package]
 name = "cpu-timer"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 winapi = { version = "0.3.9", features = ["profileapi"] }
+macros = { path = "./macros" }
+syn = { version = "2.0.23", features = ["full"] }
